# rover_mecanum

./: README.md  v2_gpio_conf.md
code/rover/: Cargo.toml  Embed.toml  rust-toolchain.toml
code/rover/.cargo/: config.toml
code/rover/crates/rover_lib/: Cargo.toml
code/rover/crates/rover_lib/src/: iface.rs  lib.rs  my_lib.rs
code/rover/src/: main.rs
code/rover_lib/: Cargo.toml
code/rover_lib/src/: lib.rs
code/rover_mecanum_uart_encoders/Debug/: rover_mecanum_uart_encoders.elf  rover_mecanum_uart_encoders.map
code/rover_mecanum_uart_encoders/Debug/Core/Src/: lwpkt_lwrb_uart.su  main.su  stm32f4xx_hal_msp.su  stm32f4xx_it.su
code/rover_mecanum_uart_encoders/Debug/cJSON/: cJSON.su  cJSON_Utils.su
code/rover_mecanum_uart_encoders/Debug/lwpkt/src/lwpkt/: lwpkt.su
code/rover_mecanum_uart_encoders/Debug/lwrb/src/lwrb/: lwrb.su
code/rover_mecanum_uart_encoders/Debug/mecanum/: mecanum.su
code/rover_mecanum_uart_encoders_v2/: .mxproject  CMakeLists.txt  README.md  rover_mecanum_uart_encoders_v2.ioc
code/rover_mecanum_uart_encoders_v2/Core/Inc/: stm32f4xx_it.h
code/rover_mecanum_uart_encoders_v2/Core/Inc/Backup/: main.h.bak  stm32f4xx_hal_conf.h.bak  stm32f4xx_it.h.bak
code/rover_mecanum_uart_encoders_v2/Core/Src/: gpio.c  main.c  stm32f4xx_it.c  tim.c  usart.c
code/rover_mecanum_uart_encoders_v2/Core/Src/Backup/: freertos.c.bak  main.c.bak  stm32f4xx_hal_msp.c.bak  stm32f4xx_it.c.bak  tim.c.bak
code/rover_mecanum_uart_encoders_v2/cmake/stm32cubemx/: CMakeLists.txt
code/rover_mecanum_uart_encoders_v2/components/app/app_main/: CMakeLists.txt  app_main.c
code/rover_mecanum_uart_encoders_v2/components/app/app_main/inc/: app_main.h  lwpkt_opts.h
code/rover_mecanum_uart_encoders_v2/components/app/app_main/src/: app_main.c
code/rover_mecanum_uart_encoders_v2/components/app/mecanum/: CMakeLists.txt
code/rover_mecanum_uart_encoders_v2/components/app/mecanum/inc/: mecanum.h
code/rover_mecanum_uart_encoders_v2/components/app/robot/: CMakeLists.txt
code/rover_mecanum_uart_encoders_v2/components/app/robot/inc/: robot.h
code/rover_mecanum_uart_encoders_v2/components/app/robot/src/: robot.c
code/rover_mecanum_uart_encoders_v2/components/app/uart_comm_rb/: CMakeLists.txt
code/rover_mecanum_uart_encoders_v2/components/app/uart_comm_rb/inc/: uart_comm_rb.h
code/rover_mecanum_uart_encoders_v2/components/app/uart_comm_rb/src/: uart_comm_rb.c
code/rover_mecanum_uart_encoders_v2/components/app/uart_rb/inc/: uart_rb.h
code/rover_mecanum_uart_encoders_v2/components/app/uart_rb/src/: uart_rb.c
code/rover_mecanum_uart_encoders_v2/main/: entry.c
schematic/kicad/pcb_shield/: .gitignore  fp-info-cache  fp-lib-table  pcb_shield.kicad_pcb  pcb_shield.kicad_prl  pcb_shield.kicad_pro  pcb_shield.kicad_sch  sym-lib-table
schematic/kicad/pcb_shield/NUCLEO-F411RE/: BOARD_NUCLEO-F411RE.kicad_mod  BOARD_NUCLEO-F411RE_custom.kicad_mod  NUCLEO-F411RE.kicad_sym
schematic/kicad/pcb_shield/file_gerber/: pcb_shield-B_Cu.gbl  pcb_shield-B_Mask.gbs  pcb_shield-B_Paste.gbp  pcb_shield-B_Silkscreen.gbo  pcb_shield-Edge_Cuts.gm1  pcb_shield-F_Cu.gtl  pcb_shield-F_Mask.gts  pcb_shield-F_Paste.gtp  pcb_shield-F_Silkscreen.gto  pcb_shield-NPTH-drl_map.gbr  pcb_shield-NPTH.drl  pcb_shield-PTH-drl_map.gbr  pcb_shield-PTH.drl
