[package]
name = "rover_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal-02 = { package = "embedded-hal", version = "0.2.7" }
embedded-hal-1 = { package = "embedded-hal", version = "1.0" }

[dependencies.uom]
version = "0.36.0"
default-features = false
features = ["f32", "autoconvert", "si", "serde"]
