[package]
name = "rover_lib"
version = "0.1.0"
edition = "2021"

[dependencies]
embedded-hal-02 = { workspace = true }
embedded-hal-1 = { workspace = true }
embedded-hal-async = { workspace = true }
libm = { workspace = true }
uom = { workspace = true }
defmt = { workspace = true }
serde = { version = "1.0.217", default-features = false, features = ["alloc", "derive"] }
